--- a/emacs.org
+++ b/emacs.org
@@ -127,13 +127,39 @@ Start frames maximized
 #+END_SRC
 
 ** Font
+From [[https://valignatev.com/posts/emacs-font/]]
 #+BEGIN_SRC emacs-lisp
-(set-face-attribute 'default nil :family "Inconsolata"
-                               :foundry "PfEd"
-                               :slant 'normal
-                               :height 130
-                               :weight 'normal
-                               :width 'normal)
+(setq my-font-name "Inconsolata")
+(defcustom my-font-size 13 "My font size")
+
+(defun set-frame-font-size (&optional font-size)
+  "Change frame font size to FONT-SIZE.
+If no FONT-SIZE provided, reset the size to its default variable."
+  (let ((font-size
+     (or font-size
+       (car (get 'my-font-size 'standard-value)))))
+    (customize-set-variable 'my-font-size font-size)
+    (set-frame-font
+     (format "%s %d" my-font-name font-size) nil t)))
+
+(defun increase-frame-font ()
+  "Increase frame font by one."
+  (interactive)
+  (set-frame-font-size (+ my-font-size 1)))
+
+(defun decrease-frame-font ()
+  "Decrease frame font by one."
+  (interactive)
+  (set-frame-font-size (- my-font-size 1)))
+
+(defun reset-frame-font ()
+  "Reset frame font to its default value."
+  (interactive)
+  (set-frame-font-size))
+
+(global-set-key (kbd "C-x C-=") #'increase-frame-font)
+(global-set-key (kbd "C-x C--") #'decrease-frame-font)
+(global-set-key (kbd "C-x C-0") #'reset-frame-font)
 #+END_SRC
 
 #+BEGIN_SRC emacs-lisp
