add global key for org-capture

--- a/emacs.org
+++ b/emacs.org
@@ -521,6 +521,7 @@ Inserted by installing 'org-mode' or when a release is made."
          ("C-c k" . outline-previous-heading)
          ("C-c h" . outline-up-heading)
          ("C-c l" . outline-show-subtree)
+         ("C-c c" . org-capture)
          :map org-mode-map
          ("C-c o d" . org-cut-element)
          ("C-c o c" . ibizaman/org-copy-element)
