--- a/emacs.org
+++ b/emacs.org
@@ -526,6 +526,8 @@ Inserted by installing 'org-mode' or when a release is made."
          ("C-c o d" . org-cut-element)
          ("C-c o c" . ibizaman/org-copy-element)
          ("<tab>" . org-cycle)))
+
+(org-babel-lob-ingest "~/.vim/emacs-lob.org")
 #+END_SRC
 
 ** Babel
@@ -548,11 +550,14 @@ Inserted by installing 'org-mode' or when a release is made."
           (:terminal . "iterm")))
   (setq org-babel-tmux-session-prefix "ob-"))
 
+#+END_SRC
+
+** Export
+#+BEGIN_SRC emacs-lisp
 (use-package ox-hugo
   :straight t
   :after ox)
 
-(org-babel-lob-ingest "~/.vim/emacs-lob.org")
 #+END_SRC
 
 * Eshell
