--- a/emacs.org
+++ b/emacs.org
@@ -893,6 +893,11 @@ TODO: slow in org-mode
   (add-hook 'after-init-hook 'global-company-mode))
 #+END_SRC
 
+* EWW
+#+BEGIN_SRC emacs-lisp
+(use-package org-eww)
+#+END_SRC
+
 * Languages
 ** Python
 #+BEGIN_SRC emacs-lisp
