--- a/emacs.org
+++ b/emacs.org
@@ -142,6 +142,13 @@ If no FONT-SIZE provided, reset the size to its default variable."
     (set-frame-font
      (format "%s %d" my-font-name font-size) nil t)))
 
+(set-face-attribute 'default nil :family "Inconsolata"
+                               :foundry "PfEd"
+                               :slant 'normal
+                               :height 130
+                               :weight 'normal
+                               :width 'normal)
+
 (defun increase-frame-font ()
   "Increase frame font by one."
   (interactive)
